--- a/client/package.json
+++ b/client/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "classnames": "^2.3.1",
+    "css-loader": "^5.2.6",
+    "node-sass": "4.14.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
