--- a/server/package.json
+++ b/server/package.json
@@ -1,10 +1,15 @@
 {
+  "scripts": {
+    "dev": "nodemon node server.js"
+  },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.2"
+    "mongoose": "^5.13.2",
+    "nodemon": "^2.0.9",
+    "uuid": "^8.3.2"
   }
 }
